<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_here_your_message"
        android:textSize="10sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:hint="@string/message"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_your_message"
        android:background="#3F51B5"
        android:layout_marginTop="20dp"/>

</LinearLayout>