<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_message_here"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:hint="@string/edit_here"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:background="#B53F7C"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>